--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ body{
 }
 
 .main:hover .stomach{
-    animation: bor 1s infinite;
+    animation: bor 1.5s ease-out infinite;
 }
 
 @keyframes bor{
@@ -150,8 +150,11 @@ body{
     0%{
         transform: rotate(0deg);
     }
-    100%{
+    50%{
         transform: rotate(20deg);
+    }
+    100%{
+        transform: rotate(0deg);
     }
 }
 
@@ -163,8 +166,11 @@ body{
     0%{
         transform: rotate(0deg);
     }
-    100%{
+    50%{
         transform: rotate(-20deg);
+    }
+    100%{
+        transform: rotate(0deg);
     }
 }
 
@@ -174,11 +180,14 @@ body{
 }
 
 @keyframes rarm {
-    from{
+    0%{
         transform: rotate(0deg);
     }
-    to{
+    50%{
         transform: rotate(90deg);
+    }
+    100%{
+        transform: rotate(0deg);
     }
 }
 
@@ -188,11 +197,14 @@ body{
 }
 
 @keyframes larm {
-    from{
+    0%{
         transform: rotate(0deg);
     }
-    to{
+    50%{
         transform: rotate(-90deg);
+    }
+    100%{
+        transform: rotate(0deg);
     }
 }
 
@@ -201,11 +213,14 @@ body{
 }
 
 @keyframes width {
-    from{
+    0%{
         width: 200px;
     }
-    to{
+    50%{
         width: 250px;
+    }
+    100%{
+        width: 200px;
     }
 }
 
@@ -214,11 +229,14 @@ body{
 }
 
 @keyframes reye {
-    from{
+    0%{
         transform: translate(0px);
     }
-    to{
+    50%{
         transform: translate(-30px);
+    }
+    100%{
+        transform: translate(0px);
     }
 }
 
@@ -227,11 +245,14 @@ body{
 }
 
 @keyframes leye {
-    from{
+    0%{
         transform: translate(0px);
     }
-    to{
+    50%{
         transform: translate(-30px);
+    }
+    100%{
+        transform: translate(0px);
     }
 }
 
